--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p id="movies">Movies</p>
             <p id="sort"><i class="fas fa-caret-down fa-x"></i> Sort</p>
         </div>
-        <div class="container">
+        <div class="container" id="Maincontent">
             <div class="row items">
                 
             </div>
